# phosphor-bmc-code-mgmt

./: activation.cpp  activation.hpp  download_manager.hpp  elog-errors.hpp  firmwareUpdate.hpp  firmwareupdate.cpp  firmwareupdate.hpp  flash.hpp  host_to_be_updated.hpp  hostactivation.cpp  hostfirmwareobjectsmap.hpp  hostimagetype.cpp  hostimagetype.hpp  image_manager.cpp  image_manager.hpp  image_manager_main.cpp  image_verify.cpp  image_verify.hpp  images.hpp  imagewatcher.cpp  imagewatcher.hpp  ipmidbusutils.cpp  ipmidbusutils.hpp  ipmiutils.cpp  ipmiutils.hpp  item_updater.cpp  item_updater.hpp  item_updater_base.cpp  item_updater_bmc.cpp  item_updater_bmc.hpp  item_updater_main.cpp  meson.build  meson_options.txt  obmc-flash-host-bic@.service.in  obmc-flash-host-bios@.service.in  obmc-flash-host-cpld@.service.in  obmc-flash-host-me@.service.in  obmc-flash-host-software@.service.in  obmc-flash-host-vr@.service.in  qemuanswer.cpp  (+6 more)
bmc/: activation_bmc.cpp  activation_bmc.hpp  item_updater_bmc.cpp  item_updater_bmc.hpp  item_updater_bmc_main.cpp
docs/: refactoring_imageupdater.md
host/: activation_host.cpp  activation_host.hpp  hostimagetype.cpp  hostimagetype.hpp  imagetype_host_association.cpp  imagetype_host_association.hpp  ipmidbusutils.cpp  ipmidbusutils.hpp  ipmiutils.cpp  ipmiutils.hpp  item_updater_host.cpp  item_updater_host.hpp  item_updater_host_main.cpp  qemuanswer.cpp
static/: item_updater_helper.cpp
test/: hostimagetypetest.cpp
xyz/openbmc_project/Software/FirmwareUpdate/: meson.build
(+1 files in other folders)
